# plugins

./: Cargo.toml  README.md
lmsensors_demo/: Cargo.toml  README.md  sysmon.sh
memtester_demo/: Cargo.toml  README.md  run.sh
memtester_demo/src/: lib.rs  main.rs
src/: main.rs
stressapptest_demo/: Cargo.toml  README.md  run.sh
stressapptest_demo/src/: lib.rs  main.rs
valgrind_demo/: Cargo.toml  README.md  run.sh
valgrind_demo/src/: main.rs
