# 配置 workspace
[workspace]
members = [
    "lmsensors_demo",
    "memtester_demo",
    "stressapptest_demo",
    "valgrind_demo",
    # 后续添加的插件目录将列在这里，例如 "log-demo"
]

[workspace.dependencies]
log = "0.4"
env_logger = "0.9"
#memtester_demo = { path = "memtester_demo" }
#stressapptest_demo = { path = "stressapptest_demo" }
